[gd_scene load_steps=18 format=3 uid="uid://crd5d22b2040f"]

[ext_resource type="PackedScene" uid="uid://dufa5u31djsph" path="res://submarine no prop.glb" id="1_kyjra"]
[ext_resource type="Script" path="res://submarine.gd" id="1_to71d"]
[ext_resource type="PackedScene" uid="uid://cb2ds4rmnrcct" path="res://prop.glb" id="2_8cx6h"]
[ext_resource type="Script" path="res://rigid_body_3d.gd" id="4_6n41f"]
[ext_resource type="Script" path="res://animation_player.gd" id="4_kuvpu"]
[ext_resource type="Script" path="res://prop.gd" id="5_qpdph"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_y24mp"]
radius = 0.98
height = 3.897

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0k5kk"]
albedo_color = Color(0, 1, 0, 1)
metallic_specular = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_ubmay"]
material = SubResource("StandardMaterial3D_0k5kk")
size = Vector3(0.545, 0.295, 0.025)

[sub_resource type="BoxShape3D" id="BoxShape3D_f7d4i"]
size = Vector3(0.545, 0.295, 0.025)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3k68w"]
albedo_color = Color(1, 0.00784314, 0.0196078, 1)

[sub_resource type="BoxMesh" id="BoxMesh_i7yau"]
material = SubResource("StandardMaterial3D_3k68w")
size = Vector3(0.545, 0.295, 0.025)

[sub_resource type="QuadMesh" id="QuadMesh_wgv06"]
size = Vector2(0.001, 0.001)

[sub_resource type="Animation" id="Animation_t8pnt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("submarine no prop/prop:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 3.14159)]
}

[sub_resource type="Animation" id="Animation_flg3g"]
resource_name = "prop_forward"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("submarine no prop/prop:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -3.14159), Vector3(0, 0, -6.28319)]
}

[sub_resource type="Animation" id="Animation_j88as"]
resource_name = "prop_reverse"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("submarine no prop/prop:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 3.14159), Vector3(0, 0, 6.28319)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lncxy"]
_data = {
"RESET": SubResource("Animation_t8pnt"),
"prop_forward": SubResource("Animation_flg3g"),
"prop_reverse": SubResource("Animation_j88as")
}

[node name="Submarine" type="CharacterBody3D"]
motion_mode = 1
script = ExtResource("1_to71d")

[node name="submarine no prop" parent="." instance=ExtResource("1_kyjra")]

[node name="RigidBody3D" type="RigidBody3D" parent="submarine no prop"]
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0
script = ExtResource("4_6n41f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="submarine no prop/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_y24mp")

[node name="prop" parent="submarine no prop" instance=ExtResource("2_8cx6h")]
transform = Transform3D(-1, -2.53518e-06, 0, 2.53518e-06, -1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("5_qpdph")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="submarine no prop"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 1.97452)
sky_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_y24mp")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.999999, 4.17146e-08, -7.68286e-08, 0, 0.878817, 0.477159, 8.74227e-08, 0.477159, -0.878817, 0, 6.113, -7.192)
current = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.285, -1.25, -1.97)
mesh = SubResource("BoxMesh_ubmay")

[node name="Area3D" type="Area3D" parent="Camera3D/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera3D/MeshInstance3D/Area3D"]
shape = SubResource("BoxShape3D_f7d4i")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.485, -1.25, -1.97)
mesh = SubResource("BoxMesh_i7yau")

[node name="Area3D" type="Area3D" parent="Camera3D/MeshInstance3D2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera3D/MeshInstance3D2/Area3D"]
shape = SubResource("BoxShape3D_f7d4i")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(0.96, 0, 0, 0, 0.62, 0, 0, 0, 0.96, -1.81, -1.035, -1.865)
mesh = SubResource("QuadMesh_wgv06")

[node name="Label3D" type="Label3D" parent="Camera3D/MeshInstance3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.3, 0.035)
text = "Test"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lncxy")
}
script = ExtResource("4_kuvpu")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(-0.688355, 0.175484, -0.703828, 0, 0.970296, 0.241922, 0.725374, 0.166528, -0.667907, -4.19, 2.503, -4.167)
light_energy = 4.276
omni_range = 22.575

[node name="PinJoint3D" type="PinJoint3D" parent="."]
node_a = NodePath("..")
node_b = NodePath("../submarine no prop/RigidBody3D")

[connection signal="input_event" from="Camera3D/MeshInstance3D/Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="input_event" from="Camera3D/MeshInstance3D2/Area3D" to="." method="_on_area_3d_input_event_brake"]
